# kibble-1

./: .asf.yaml  .gitignore  .pre-commit-config.yaml  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  NOTICE  README.md  USAGE.md  docker-compose-dev.yaml  kibble.ini  nginx-dev.conf  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  label.yaml  labeler.yaml
api/: handler.py
api/pages/: __init__.py  account.py  code-changes.py  code-evolution.py  code-trends.py  commits.py  committers.py  filters.py  issue-actors.py  issue-age.py  issue-closers.py  issue-openers.py  issue-top.py  issue-trends.py  issues.py  oauth.py  session.py  sloc.py  sources.py  top-commits.py  top-sloc.py  verify.py  views.py  widgets.py
api/pages/bio/: bio.py  newtimers.py  trends.py
api/pages/ci/: queue.py  status.py  top-buildcount.py  top-buildtime.py
api/pages/code/: activity.py  changes.py  commits.py  committers.py  evolution.py  pony-timeseries.py  pony.py  punchcard.py  relationships.py  retention.py  sloc.py  top-commits.py  top-sloc.py  trends.py
api/pages/forum/: actors.py  creators.py  issues.py  responders.py  top-count.py  top.py  trends.py
api/pages/issue/: actors.py  age.py  closers.py  issues.py  openers.py  pony-timeseries.py  relationships.py  retention.py  top-count.py  top.py  trends.py
api/pages/mail/: keyphrases.py  map.py  mood-timeseries.py  mood.py  pony-timeseries.py  relationships.py  retention.py  timeseries-single.py  timeseries.py  top-authors.py  top-topics.py  trends.py
api/pages/org/: contributors.py  list.py  members.py  sourcetypes.py  trends.py
api/plugins/: __init__.py  database.py  openapi.py  session.py
api/yaml/: kibble.yaml  openapi.yaml  sourcetypes.yaml  widgets.yaml
api/yaml/openapi/: combine.py
docs/: Makefile  usage.rst
docs/source/: conf.py  index.rst  managing.rst  setup.rst  usecases.rst
kibble/: __main__.py  configuration.py  settings.py  version.py
kibble/api/: handler.py
kibble/api/pages/: __init__.py  account.py  filters.py  session.py  sources.py  verify.py  views.py  widgets.py
kibble/api/plugins/: database.py  openapi.py  session.py
kibble/cli/: make_account_command.py  scanner_command.py  setup_command.py
kibble/mappings/: mappings.json
kibble/scanners/: README.md  config.yaml  kibble-scanner.py  mapping.json
kibble/setup/: kibble.ini  makeaccount.py  parser.py  setup.py
scripts/: generate_api_test.py
setup/: kibble.yaml.sample  makeaccount.py  mappings.json  requirements.txt  setup.py
tests/: test_configuration.py
tests/api/: test_handler.py
ui/: apidoc.html  contributors.html  dashboard.html  engagement.html  index.html  login.html  organisations.html  relationships.html
ui/css/: c3.css  chosen.css  daterangepicker.css  kibble.min.css  main.css  theme.css
ui/js/: app.js  c3.min.js  core.js  d3.min.js  kibble.v1.js
(+168 files in other folders)
