# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
name = Kibble
summary = Apache Kibble is a tool to collect, aggregate and visualize data about any software project that uses commonly known tools.
description-file = README.md
author = Apache Kibble
author-email = dev@kibble.apache.org
license = Apache License, Version 2.0
license_files =
   LICENSE
   NOTICE

[bdist_wheel]
python-tag=py3


[files]
packages = kibble

[easy_install]
